# HVM3-Strict

./: .gitignore  HVM3-Strict.cabal  README.md  bench.sh  confirm.py  diff.txt  flake.nix  multi.txt  out  shell.nix  single.txt
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: CI.yml
examples/: bench_parallel_sum_range.bend  bench_parallel_sum_range.hvms
src/: Convert.hs  Extract.hs  Inject.hs  Main.hs  Parse.hs  Runtime.c  Show.hs  Type.hs  macros.h
src/HVMS/: Extract.hs  Inject.hs  Main.hs  Parse.hs  Show.hs  Type.hs
