cabal-version:      3.0
name:               HVM3-Strict
version:            0.1.0.0
homepage:           https://higherorderco.com/
license:            MIT
license-file:       LICENSE
author:             Victor Taelin
maintainer:         victor.taelin@gmail.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable hvms
    import:           warnings
    main-is:          Main.hs
    other-modules:    Type
                    , Extract
                    , Inject
                    , Parse
                    , Show
    build-depends:    base ^>=4.21.0.0,
                      containers ^>=0.7,
                      parsec ^>=3.1.17.0,
    hs-source-dirs:   src
    default-language: GHC2024
    c-sources:        src/Runtime.c
    if os(linux) && arch(x86_64) -- FIXME: Make it detect specificaly AMD arch
        extra-lib-dirs:  
        cc-options: -O3 -march=znver3 
    else 
        cc-options:  -O3
    extra-libraries:  c
    ghc-options:     -Wno-all
