cabal-version:      3.0
name:               HVM3-Strict
version:            0.1.0.0
homepage:           https://higherorderco.com/
license:            MIT
license-file:       LICENSE
author:             Victor Taelin
maintainer:         victor.taelin@gmail.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options:          -Wall

executable hvms
    import:               warnings
    main-is:              Main.hs
    other-modules:        Type
                        , Extract
                        , Inject
                        , Parse
                        , Show
    build-depends:        base ^>=4.21.0.0,
                          containers ^>=0.7,
                          parsec ^>=3.1.17.0,
                          clock
    hs-source-dirs:       src
    default-language:     GHC2024
    c-sources:            src/Runtime.c
    cc-options:           -O3
    -- cc-options:           -march=native -ftree-vectorize
    extra-libraries:      c
    if os(linux)
        extra-libraries:  atomic
    ghc-options:          -Wno-all
